syntax = "proto3";

package blog;

option java_package = "com.proto.blog";
option java_multiple_files = true;

message Blog {
  string id = 1;
  string author_id = 2;
  string title = 3;
  string content = 4;
}

message BlogRequest {
  Blog blog = 1; // the id shouldn't matter
}

message BlogResponse {
  Blog blog = 1; // the id will correspond to the one in mongoDB
}

message ReadBlogRequest {
  string blogId = 1;
}



service BlogService {
  rpc CreateBlog(BlogRequest) returns (BlogResponse){};
  rpc ReadBlog(ReadBlogRequest) returns (BlogResponse){};
  rpc UpdateBlog(BlogRequest) returns (BlogResponse){};
}